# the-eyes

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  go.mod  go.sum  install.sh  setup.py  the-eyes.md
.github/workflows/: release.yml
cmd/agent/: main.go
cmd/server/: main.go
config/: default.yaml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs
crates/eye/: __init__.py  agent.py  cli.py  config.py
crates/eye/core/: __init__.py  client.py  session.py
crates/eye/integrations/: export.py  stream.py
crates/eye/utils/: __init__.py
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
eye/: __init__.py  agent.py  cli.py
eye/core/: metrics.py  session.py
eye/integrations/: __init__.py  webhook.py
eye/utils/: logging.py  validation.py
install/: install.ps1  install.sh
pkg/auth/: middleware.go  oauth.go  token.go
pkg/capture/: capture.go  capture_windows.go  compression.go
pkg/storage/: disk.go  manager.go  memory.go
pkg/transport/: http.go  protocol.go  websocket.go
scripts/: build.sh  build_release.sh  install.sh  publish_release.sh  test.sh
