[workspace]
resolver = "2"
members = [
    "crates/agent",
    "crates/server",
    "crates/capture",
    "crates/storage",
    "crates/transport",
    "crates/auth",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# HTTP server and client
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.25"
screenshots = "0.7"

# WebSocket
tokio-tungstenite = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1.5"
futures = "0.3"

# OAuth
oauth2 = "4.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true